<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Larm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ActivateTracking"><b>Aktivera tracking</b></string>
    <string name="TakePictures">TA BILDER</string>
    <string name="Record">SPELA IN</string>
    <string name="Notes">ANTECKNA</string>
    <string name="Call">STÖDSAMTAL</string>
    <string name="Alarm"><b>TRYCK FÖR ATT LARMA</b></string>
    <string name="Back">Bakåt</string>
    <string name="Contact">Kontakt</string>
    <string name="Done">Klar!</string>
    <string name="Where">VART ÄR DU PÅ VÄG?</string>
    <string name="Home">Hem</string>
    <string name="Phone">Telefon</string>
    <string name="Address">Address</string>
    <string name="Postnumber">Postnummer</string>
    <string name="City">Stad</string>
    

    <string-array name="destination_array">
        <item>Hem</item>
        <item>Besöka vän</item>
        <item>Skola/jobb</item>
        <item>Shopping/Ärende</item>
        <item>Restaurang/Café</item>
        <item>Krog/Nattklubb</item>
        <item>Övrigt</item>
    </string-array>

</resources>