<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/whereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Where"
        android:layout_gravity="center" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="fieldsbutton"
            android:text="@string/Back"
            android:visibility="invisible" />

        <Button
            android:id="@+id/contactBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fieldsbutton"
            android:text="@string/Contact"
            android:layout_gravity="right" 
            android:layout_alignParentRight="true"
            android:visibility="invisible"  />

    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

</LinearLayout>